fixed issue where the horizontal scroll would appear for the label list when there is no overflow seen

--- a/styles.css
+++ b/styles.css
@@ -240,7 +240,7 @@
 }
 
 #label-list {
-  width: 208px;
+  width: 100%;
 }
 
 /* update these when changing the left side bar width */
